httpbin.yaml
apiVersion: v1
kind: Pod
metadata:
  name: httpbin
  namespace: ingress-apisix
  labels:
    app: httpbin
spec:
  containers:
    - name: httpbin
      image: kennethreitz/httpbin
      imagePullPolicy: Always
  restartPolicy: Always
