httpbin-service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  namespace: ingress-apisix
spec:
  selector:
    app: httpbin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
